syntax = "proto3";


option java_multiple_files = true;
option java_package = "com.sp.grpcProto";

service WarehouseService{
  rpc FetchWarehouseByIds(WarehouseGRPCRequest) returns (WarehouseGRPCResponse);
}

message WarehouseGRPCRequest{
  repeated int64 warehouseIds = 1;
}

message WarehouseGRPCResponse{
  repeated Warehouse warehouse = 1;
}

message Warehouse{
  int64 warehouseId = 1;
  int32 maxQuantity = 2;
}
